2013-10-26  Thomas Bleher <tbleher@gmx.de>

	* src/qtterminal/qt_term.cpp:  Change the Qt terminal to only create its
	data when initialized (to avoid the Static Initialization Order Fiasco)
	and to destroy its data in a gnuplot atexit handler.

2013-10-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii df_readmatrix):  If the first field of a
	tab-separated csv file was empty, it would be incorrectly ignored when
	processing that input line.
	Bugfix. 

	* src/wxterminal/wxt_gui.cpp:  Extend toggling active region in key box
	to include enhanced text as well as non-enhanced text.
	Bugfix. 

2013-10-25  Thomas Bleher <tbleher@gmx.de>

	* src/stdfn.c(gp_atexit gp_exit) src/stdfn.h src/command.c(exit_command)
	src/plot.c(main) src/qtterminal/qt_term.cpp src/win/winmain.c
	src/wxterminal/gp_cairo.c src/wxterminal/gp_cairo_helpers.c
	src/wxterminal/wxt_gui.cpp term/be.trm term/x11.trm:

	Create gnuplot atexit handlers that are called before exit(3)
	
	Normal atexit-handlers are called in the reverse order of registration.
	This causes problems when a library has its own global destructors which
	do not handle the case that objects of the library may still be active
	and destroyed in the atexit handler. This has been observed with Qt.
	
	Introduce a new function gp_exit() which calls the gnuplot atexit handlers
	and then calls exit(3). Also create gp_atexit() to register gnuplot exit
	handlers.

	* src/getcolor.c (quantize_gray):  Windows compile error ("small" is not
	accepted as a variable name).

	* config/msvc/Makefile:  DEBUG option when compiling with MSVC

2013-10-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/corgraph.asm  src/hrcgraph.asm  src/pcgraph.asm src/corplot.c:
	Remove vestigial files from the era of 16-bit DOS.	

	* configure.in term/unixpc.trm src/term.c src/term.h src/syscfg.h
	src/makefile.all src/makefile.awc config/makefile.* docs/doc2texi.el: